[EasyUnlock] Fix EasyUnlock not initializing on boot from power off.

Because the Bluetooth adapter is not immediately initialized after boot, this
edge case was causing EasyUnlock to fail to load.

There was also some unintuitive lock screen behaviour that caused the 
first focused user to be unset.

BUG=758415

Change-Id: If98e0acc3d944f2508d84a5c8241a907778462f5
Reviewed-on: https://chromium-review.googlesource.com/631137
Commit-Queue: Tim Song <tengs@chromium.org>
Reviewed-by: Gustavo Sacomoto <sacomoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497114}
Former-commit-id: 9fd93b0de71b01ef99bad0d95ac789804871697d